# Procesadores_2425

antlr/: .gitignore  Parser.g4  README.md  Scanner.g4  TEST-P1.abc  TEST-P1.txt  build_hooks.py  main.py  parse_tree  pyproject.toml  test-happy.txt  test.txt
antlr/src/antlr/: Parser.g4  Scanner.g4
antlr/src/python/: antlr_to_abc.py  main.py
antlr/src/python/utils/: utility.py
backend/api/: README.md
backend/api/src/: main.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: abcPlayer.tsx  author.tsx  header.tsx  upload-file.tsx
frontend/src/css/: header.module.css  midi-player.css
frontend/src/pages/: editor.tsx  examples.tsx  help.tsx
partitune-cup/: pom.xml  test.txt
partitune-cup/src/main/cup/procesadores/partitune/: Parser.cup
partitune-cup/src/main/java/procesadores/partitune/: Main.java  Utility.java
partitune-cup/src/main/jflex/procesadores/partitune/: Scanner.lex
